Fix category title overflow and search results overlap

--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -2470,3 +2470,13 @@ input.form-control.newsletter-email {
 .wrapper-header {
     overflow: visible;
 }
+
+.nsearchinput-pl.well {
+    top: -3px;
+}
+
+@media only screen and (min-width: 992px)  {
+  .category-heading-wrapper {
+    min-height: 145px;
+  }
+}
